wave contrast corrected

--- a/assets/style.css
+++ b/assets/style.css
@@ -122,7 +122,7 @@ nav a {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #beb45a;
+  background-color: #776b50;
   border-radius: 0;
 }
 .item-column {
